--- a/Testbed/Testbed.Android/packages.config
+++ b/Testbed/Testbed.Android/packages.config
@@ -1,12 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FilenameBuddy" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="FontBuddy" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="GameTimer" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="HadoukInput" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="ImageSharp" version="1.0.0-alpha9-00194" targetFramework="monoandroid81" />
+  <package id="InputHelper" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="MatrixExtensions" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="MenuBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="monoandroid44" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid44" />
   <package id="MonoGame.Framework.Android" version="3.7.0.1708" targetFramework="monoandroid44" />
-  <package id="MonogameScreenTools" version="1.0.3" targetFramework="monoandroid44" />
+  <package id="MouseBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid44" />
-  <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="monoandroid44" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-beta0005" targetFramework="monoandroid44" />
+  <package id="Plugin.CurrentActivity" version="2.1.0.2" targetFramework="monoandroid81" />
+  <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="monoandroid81" />
+  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="ResolutionBuddy" version="2.0.1" targetFramework="monoandroid44" />
+  <package id="SixLabors.Core" version="0.1.0-alpha0002" targetFramework="monoandroid81" />
+  <package id="StateMachineBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Buffers" version="4.5.0" targetFramework="monoandroid44" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid44" />
@@ -15,6 +28,8 @@
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid44" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="monoandroid81" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.IO" version="4.3.0" targetFramework="monoandroid44" />
@@ -50,7 +65,17 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid44" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid44" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="monoandroid81" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid44" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid44" />
+  <package id="ToastBuddyLib" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="TouchScreenBuddy" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="Vector2Extensions" version="2.0.0" targetFramework="monoandroid44" />
+  <package id="Xam.Plugin.DeviceInfo" version="4.0.0.13" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid81" />
+  <package id="XmlBuddy" version="2.0.1" targetFramework="monoandroid44" />
 </packages>
