--- a/Testbed/Testbed.WindowsDX/packages.config
+++ b/Testbed/Testbed.WindowsDX/packages.config
@@ -1,21 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExternalStorageBuddy" version="1.0.0" targetFramework="net461" />
+  <package id="FilenameBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="FontBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="GameTimer" version="2.0.0" targetFramework="net461" />
+  <package id="HadoukInput" version="2.0.0" targetFramework="net461" />
+  <package id="ImageSharp" version="1.0.0-alpha9-00194" targetFramework="net461" />
+  <package id="InputHelper" version="2.0.0" targetFramework="net461" />
+  <package id="MatrixExtensions" version="2.0.0" targetFramework="net461" />
+  <package id="MenuBuddy" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.7.0.1708" targetFramework="net461" />
-  <package id="MonogameScreenTools" version="1.0.3" targetFramework="net461" />
+  <package id="MouseBuddy" version="2.0.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
-  <package id="SharpDX" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.Direct2D1" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.Direct3D11" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.Direct3D9" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.MediaFoundation" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.XAudio2" version="4.0.1" targetFramework="net461" />
-  <package id="SharpDX.XInput" version="4.0.1" targetFramework="net461" />
-  <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="net461" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-beta0005" targetFramework="net461" />
+  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="net461" />
+  <package id="ResolutionBuddy" version="2.0.1" targetFramework="net461" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.XInput" version="4.2.0" targetFramework="net461" />
+  <package id="SixLabors.Core" version="0.1.0-alpha0002" targetFramework="net461" />
+  <package id="StateMachineBuddy" version="2.0.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -60,7 +72,14 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="ToastBuddyLib" version="2.0.0" targetFramework="net461" />
+  <package id="TouchScreenBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="Vector2Extensions" version="2.0.0" targetFramework="net461" />
+  <package id="Xam.Plugin.DeviceInfo" version="4.0.0.13" targetFramework="net461" />
+  <package id="XmlBuddy" version="2.0.1" targetFramework="net461" />
 </packages>
