--- a/Testbed/Testbed.iOS/packages.config
+++ b/Testbed/Testbed.iOS/packages.config
@@ -1,12 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExternalStorageBuddy" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="FilenameBuddy" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="FontBuddy" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="GameTimer" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="HadoukInput" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="InputHelper" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="MatrixExtensions" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="MenuBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="MonoGame.Framework.iOS" version="3.7.0.1708" targetFramework="xamarinios10" />
-  <package id="MonogameScreenTools" version="1.0.3" targetFramework="xamarinios10" />
+  <package id="MonogameScreenTools" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="MouseBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
+  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="ResolutionBuddy" version="2.0.1" targetFramework="xamarinios10" />
   <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="xamarinios10" />
   <package id="SixLabors.ImageSharp" version="1.0.0-beta0005" targetFramework="xamarinios10" />
+  <package id="StateMachineBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
@@ -53,4 +66,9 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="ToastBuddyLib" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="TouchScreenBuddy" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="Vector2Extensions" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.DeviceInfo" version="4.0.0.13" targetFramework="xamarinios10" />
+  <package id="XmlBuddy" version="2.0.1" targetFramework="xamarinios10" />
 </packages>
