--- a/Testbed/Testbed.iOS/packages.config
+++ b/Testbed/Testbed.iOS/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExternalStorageBuddy" version="1.0.0" targetFramework="xamarinios10" />
+  <package id="ExternalStorageBuddy" version="1.0.1" targetFramework="xamarinios10" />
   <package id="FilenameBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="FontBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="GameTimer" version="2.0.0" targetFramework="xamarinios10" />
@@ -11,14 +11,14 @@
   <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="MonoGame.Framework.iOS" version="3.7.0.1708" targetFramework="xamarinios10" />
-  <package id="MonogameScreenTools" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="MonogameScreenTools" version="1.0.10" targetFramework="xamarinios10" />
   <package id="MouseBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="PrimitiveBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="xamarinios10" />
   <package id="ResolutionBuddy" version="2.0.1" targetFramework="xamarinios10" />
   <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="xamarinios10" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-beta0005" targetFramework="xamarinios10" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-dev002099" targetFramework="xamarinios10" />
   <package id="StateMachineBuddy" version="2.0.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinios10" />
